// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KAlert Renders danger variant 1`] = `
<div role="alert" class="k-alert danger" message="I am danger">
  <!---->
  <!---->
  <!----> <span class="alert-msg"></span>
  <!---->
  <!---->
</div>
`;

exports[`KAlert Renders info variant 1`] = `
<div role="alert" class="k-alert info" message="I am info">
  <!---->
  <!---->
  <!----> <span class="alert-msg"></span>
  <!---->
  <!---->
</div>
`;

exports[`KAlert Renders success variant 1`] = `
<div role="alert" class="k-alert success" message="I am success">
  <!---->
  <!---->
  <!----> <span class="alert-msg"></span>
  <!---->
  <!---->
</div>
`;

exports[`KAlert Renders warning variant 1`] = `
<div role="alert" class="k-alert warning" message="I am warning">
  <!---->
  <!---->
  <!----> <span class="alert-msg"></span>
  <!---->
  <!---->
</div>
`;

exports[`KAlert show alert with white background and button(s) 1`] = `
<div role="alert" class="k-alert info hasButton" message="Hello world">
  <!---->
  <!---->
  <!----> <span class="alert-msg"></span>
  <!---->
  <!---->
</div>
`;

exports[`KAlert show alert/banner with isWideBanner class styles for white background, buttons and notification icon 1`] = `
<div role="alert" class="k-alert info isWideBanner" message="Hello world">
  <!---->
  <!---->
  <!----> <span class="alert-msg"></span>
  <div><span class="mainMessageText"></span> <span class="secMessageText"></span></div>
  <!---->
</div>
`;
